# PostureTrack

./: .gitignore  Dataset.md  Install.md  LICENSE  README.md  demo_pifpaf.sh  pyproject.toml  requirements.txt  setup.py
src/PostureTrack/: loomo.py  pifpaf.py  run.py  top_down.py  utilities.py
src/PostureTrack/config/: README.md  cfg.yaml  cfg_pifpaf.yaml  cfg_topdown.yaml
src/PostureTrack/config/arch/: bottom_up.yaml  only_det.yaml  top_down.yaml  top_down_keypoints.yaml
src/PostureTrack/config/detector/: yolov5.yaml  yolov7.yaml
src/PostureTrack/config/io/: cfg_io.yaml
src/PostureTrack/config/keypoints/: deeppose.yaml  deeppose_videopose.yaml  hrnet.yaml  hrnet_videopose.yaml  mmpose.yaml
src/PostureTrack/config/loomo/: loomo_cfg.yaml
src/PostureTrack/config/tracker/: bytetrack.yaml  pifpaf_tracker.yaml  siamese.yaml  stark.yaml
src/PostureTrack/detectors/: base_detector.py  yolov5_detector.py  yolov7_detector.py
src/PostureTrack/keypoints/: keypoints2D.py  keypoints3D.py  mmpose.py
src/PostureTrack/perceptors/: base_perceptor.py  mot_perceptor.py  sot_perceptor.py
src/PostureTrack/trackers/: base_mmtracking.py  mmtracking_mot.py  mmtracking_sot.py
