[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "PostureTrack"
version = "0.0.1"
authors = [
  { name="Theo Hermann", email="theo.hermann@epfl.ch" },
]
description = "Tracking Framework based on Keypoints using ReIdentification"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]


